// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Beispiele > funktion: erzeugter Code bleibt stabil 1`] = `
"from pybricks.hubs import PrimeHub
from pybricks.parameters import Direction, Port
from pybricks.pupdevices import Motor
from pybricks.robotics import DriveBase

hub = PrimeHub()

# Geräte an den Anschlüssen
motor_A = Motor(Port.A, Direction.COUNTERCLOCKWISE)
motor_B = Motor(Port.B)

# Fahrbasis
roboter = DriveBase(motor_A, motor_B, wheel_diameter=56, axle_track=112)
roboter.use_gyro(True)

def Ecke():
    roboter.straight(200)
    roboter.turn(90)

for count in range(4):
    Ecke()
"
`;

exports[`Beispiele > gleichzeitig: erzeugter Code bleibt stabil 1`] = `
"from pybricks.hubs import PrimeHub
from pybricks.parameters import Button, Direction, Icon, Port
from pybricks.pupdevices import Motor
from pybricks.robotics import DriveBase
from pybricks.tools import wait, multitask, run_task

hub = PrimeHub()

# Geräte an den Anschlüssen
motor_A = Motor(Port.A, Direction.COUNTERCLOCKWISE)
motor_B = Motor(Port.B)

# Fahrbasis
roboter = DriveBase(motor_A, motor_B, wheel_diameter=56, axle_track=112)
roboter.use_gyro(True)

# Nachrichten zwischen den Programmteilen: wie oft welche gesendet wurde
nachrichten = {}

def sende(name):
    nachrichten[name] = nachrichten.get(name, 0) + 1

async def warte_auf(name):
    stand = nachrichten.get(name, 0)
    while nachrichten.get(name, 0) == stand:
        await wait(10)

async def start():
    while True:
        await roboter.straight(200)
        await roboter.turn(90)

async def ereignis():
    while True:
        while not (Button.LEFT in hub.buttons.pressed()):
            await wait(10)
        await hub.speaker.beep(880, 200)
        sende('lachen')
        while Button.LEFT in hub.buttons.pressed():
            await wait(10)

async def nachricht_lachen():
    while True:
        await warte_auf('lachen')
        hub.display.icon(Icon.HAPPY)
        await wait(1000)
        hub.display.off()

# Alle Programmteile gleichzeitig starten
run_task(multitask(nachricht_lachen(), start(), ereignis()))
"
`;

exports[`Beispiele > linie: erzeugter Code bleibt stabil 1`] = `
"from pybricks.hubs import PrimeHub
from pybricks.parameters import Direction, Port
from pybricks.pupdevices import ColorSensor, Motor
from pybricks.robotics import DriveBase

hub = PrimeHub()

# Geräte an den Anschlüssen
motor_A = Motor(Port.A, Direction.COUNTERCLOCKWISE)
motor_B = Motor(Port.B)
farbe_C = ColorSensor(Port.C)

# Fahrbasis
roboter = DriveBase(motor_A, motor_B, wheel_diameter=56, axle_track=112)
roboter.use_gyro(True)

while True:
    roboter.drive(120, (farbe_C.reflection() - 50) * 1.2)
"
`;

exports[`Beispiele > motor: erzeugter Code bleibt stabil 1`] = `
"from pybricks.hubs import PrimeHub
from pybricks.parameters import Port
from pybricks.pupdevices import Motor
from pybricks.tools import wait

hub = PrimeHub()

# Geräte an den Anschlüssen
motor_C = Motor(Port.C)

motor_C.reset_angle(0)
motor_C.run_angle(300, 90)
wait(500)
motor_C.run_target(300, 0)
hub.display.text('fertig')
"
`;

exports[`Beispiele > quadrat: erzeugter Code bleibt stabil 1`] = `
"from pybricks.hubs import PrimeHub
from pybricks.parameters import Direction, Port
from pybricks.pupdevices import Motor
from pybricks.robotics import DriveBase

hub = PrimeHub()

# Geräte an den Anschlüssen
motor_A = Motor(Port.A, Direction.COUNTERCLOCKWISE)
motor_B = Motor(Port.B)

# Fahrbasis
roboter = DriveBase(motor_A, motor_B, wheel_diameter=56, axle_track=112)
roboter.use_gyro(True)

for count in range(4):
    roboter.straight(200)
    roboter.turn(90)
hub.speaker.beep(880, 200)
"
`;

exports[`Beispiele > steuerfeld: erzeugter Code bleibt stabil 1`] = `
"from pybricks.hubs import PrimeHub
from pybricks.parameters import Direction, Port
from pybricks.pupdevices import Motor
from pybricks.robotics import DriveBase
from pybricks.tools import wait, read_input_byte, StopWatch

hub = PrimeHub()

# Geräte an den Anschlüssen
motor_A = Motor(Port.A, Direction.COUNTERCLOCKWISE)
motor_B = Motor(Port.B)

# Fahrbasis
roboter = DriveBase(motor_A, motor_B, wheel_diameter=56, axle_track=112)
roboter.use_gyro(True)

# Steuerfeld von Blockwerk: Eingaben kommen als einzelne Bytes vom Browser
steuerfeld = {'x': 0, 'y': 0, 'A': False, 'B': False, 'C': False, 'D': False}
steuerfeld_uhr = StopWatch()

def steuerung(name):
    while True:
        byte = read_input_byte()
        if byte is None:
            break
        steuerfeld_uhr.reset()
        if 150 <= byte <= 170:
            steuerfeld['x'] = (byte - 160) * 10
        elif 180 <= byte <= 200:
            steuerfeld['y'] = (byte - 190) * 10
        elif 65 <= byte <= 68:
            steuerfeld[chr(byte)] = True
        elif 97 <= byte <= 100:
            steuerfeld[chr(byte - 32)] = False
    # Funkstille: Verbindung weg, also alles loslassen
    if steuerfeld_uhr.time() > 1000:
        steuerfeld.update(x=0, y=0, A=False, B=False, C=False, D=False)
    return steuerfeld[name]

while True:
    roboter.drive(steuerung('y') * 3, steuerung('x') * 2)
    if steuerung('A'):
        hub.speaker.beep(880, 100)
    wait(20)
"
`;

exports[`Beispiele > wand: erzeugter Code bleibt stabil 1`] = `
"from pybricks.hubs import PrimeHub
from pybricks.parameters import Direction, Icon, Port
from pybricks.pupdevices import ForceSensor, Motor, UltrasonicSensor
from pybricks.robotics import DriveBase
from pybricks.tools import wait

hub = PrimeHub()

# Geräte an den Anschlüssen
motor_A = Motor(Port.A, Direction.COUNTERCLOCKWISE)
motor_B = Motor(Port.B)
abstand_D = UltrasonicSensor(Port.D)
kraft_E = ForceSensor(Port.E)

# Fahrbasis
roboter = DriveBase(motor_A, motor_B, wheel_diameter=56, axle_track=112)
roboter.use_gyro(True)

hub.display.icon(Icon.ARROW_UP)
while not kraft_E.pressed():
    wait(10)
roboter.drive(150, 0)
while not (abstand_D.distance() < 100):
    wait(10)
roboter.brake()
hub.display.icon(Icon.HAPPY)
"
`;

exports[`Beispiele > zaehlen: erzeugter Code bleibt stabil 1`] = `
"from pybricks.hubs import PrimeHub
from pybricks.parameters import Direction, Port
from pybricks.pupdevices import ColorSensor, Motor
from pybricks.robotics import DriveBase
from pybricks.tools import wait

hub = PrimeHub()

# Geräte an den Anschlüssen
motor_A = Motor(Port.A, Direction.COUNTERCLOCKWISE)
motor_B = Motor(Port.B)
farbe_C = ColorSensor(Port.C)

# Fahrbasis
roboter = DriveBase(motor_A, motor_B, wheel_diameter=56, axle_track=112)
roboter.use_gyro(True)

# Variablen anlegen
Linien = 0

Linien = 0
roboter.drive(120, 0)
while True:
    while not (farbe_C.reflection() < 30):
        wait(10)
    Linien = Linien + 1
    hub.display.number(Linien)
    while not (farbe_C.reflection() > 60):
        wait(10)
"
`;
